tests/expected_invalid_yielded_call_unhandled.diag.out
<input>:12:32: error: failing expression must be handled with `try` or `match`
    public fn boot() -> FileHandle {
                                   ^^^^^^^^^^^^^^
